Fixed auto-refresh bug. Temperature set to nowrap

--- a/src/style.css
+++ b/src/style.css
@@ -301,6 +301,7 @@ body {
   font-weight: bold;
   font-size: 2.2rem;
   justify-self: start;
+  white-space: nowrap;
 }
 
 .basics-temperature > p:nth-child(2) {
